Fixed: remove option fields focus spacing

--- a/jsapp/scss/stylesheets/partials/form_builder/_card_multichoice.scss
+++ b/jsapp/scss/stylesheets/partials/form_builder/_card_multichoice.scss
@@ -58,7 +58,7 @@
     font-weight: 600;
     border-radius: 5px;
     border: $thinBorderStyle;
-    padding: 5px;
+    // padding: 5px;
     font-size: 13px;
     display: inline-block;
     // hittine - To remove auto-generate field
